# mydjangoproject

./: .gitignore  Dockerfile  pyproject.toml  readme.md
config/: urls.py
config/settings/: aws_auth.py  base.py  deploy.py  local.py
nginx/: Dockerfile  nginx.conf
post/: urls.py  views.py
post/migrations/: 0001_initial.py
