[tool.poetry]
name = "mydjangoproject"
version = "0.1.0"
description = ""
authors = ["updaun <updauney@daum.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "3.2"
boto3 = "^1.34.111"
djangorestframework = "^3.15.1"
django-storages = "^1.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
